# let-us-build

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  status.md
apps/cli/: pyproject.toml
apps/cli/src/let_us_build_cli/: __init__.py  __main__.py
apps/web/: README.md  app.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
apps/web/src/: app.tsx  entry-server.tsx
apps/web/src/components/: TicketDrawer.tsx
apps/web/src/components/kanban/: Board.tsx  TicketCard.tsx
apps/web/src/lib/: api.ts  roles.ts  types.ts  ws.ts
apps/web/src/routes/: index.tsx
apps/web/src/routes/projects/: [id].tsx
apps/web/src/styles/: global.css  kanban.css  tokens.css
design/: ui-ux-spec.md
document/: agent-discussion-protocol.md  agent-sdlc-flow.md  backlog.md  monorepo-layout.md  system-design.md
product/: PRD.md
research/: findings.md
tests/: conftest.py  test_agent_run.py  test_api.py  test_smoke.py  test_tickets.py
