[project]
name = "let-us-build-cli"
version = "0.0.0"
description = "let-us-build — CLI entrypoint (`let-us-build start`)."
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "lub-api",
]

[project.scripts]
let-us-build = "let_us_build_cli.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/let_us_build_cli"]
